# fastapi-study

./: index.html  main.py  pyproject.toml
1-parameters/: path_parameters.py  query_parameters.py  request_body.py
2-files/: request_files.py  request_forms_and_files.py
3-error/: handling_errors.py
Dependencies/: dependencies_with_yield.py  dependency_in_decorator.py  first_steps.py  global_dependencies.py  sub-dependencies.py
